Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127051

Language server doesn't provide hover documentation for WebEngineView.url

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.1, 6.8, 6.9.0 FF
    • 6.8
    • QML: Tooling
    • None
    • ffd39a4f5 (dev), 15d0a40ed (dev), 7d9189a3b (6.8), 9b035049a (6.8)

      Hovering over a property in Qt Creator now displays documentation for the property in a tooltip. This works fine for most properties, but WebEngineView.url in particular seems to trip the language server up, because no hover documentation is displayed at all. Other properties of the WebEngineView type do not have the same issue. I assume this is because the property name and the property type are both "url".

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            semih.yavuz Semih Yavuz
            kchehlarski Kaloyan Chehlarski
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes